syntax = "proto3";

package calculator;

option go_package="calculator/calculatorpb";

message Sum {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeDecompositionRequest {
    int32 num_to_decompose = 1;
}

message PrimeDecompositionResponse {
    int32 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 num = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message StreamMaxNumberRequest {
    int32 num = 1;
}

message StreamMaxNumberResponse {
    int32 max_num = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    
    rpc PrimeDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};

    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    rpc StreamMaxNumber(stream StreamMaxNumberRequest) returns (stream StreamMaxNumberResponse) {}
    
    // error handling
    // this RPC will throw an exception if the sent number is negative
    // the error beign sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}

